[tool.poetry]
name = "radiosunpy"
version = "0.1.0"
description = "RATAN-600 radioastronomical solar data and methods Python library"
authors = [
    "Igor Lysov <iilysov.sci@gmail.com>", 
    "Irina Knyazeva <iknyazeva@gmail.com>", 
    "Evgenii Kurochkin <k-u-r-o-k@yandex.ru>", 
    "Andrey Shendrik <ashend90@gmail.com>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/radiosunpy/RadioSunPy"
documentation = "https://radiosunpy.github.io/RadioSunPy/"

keywords = ["solar physics", "radioastronomy", "physics", "data proccessing", "ratan-600"]

[tool.poetry.dependencies]
python = "^3.10"
astropy = "6.1.3"
numpy = "2.1.1"
pandas = "2.2.2"
python-dateutil = "2.9.0.post0"
requests = "2.32.3"
scipy = "1.14.1"
PyWavelets = "1.7.0"
et-xmlfile = "1.1.0"
openpyxl = "3.1.5"

[tool.poetry.group.dev.dependencies]
sphinx = "^4.0"
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
